// Copyright 2019 Iron City Software LLC
//
// This file is part of CrewTools.
//
// CrewTools is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// CrewTools is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with CrewTools.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto2";

package crewtools_crewmobile;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  optional string json_name = 50000;
}

option java_package = "crewtools.crewmobile";
option java_outer_classname = "Proto";

// Local configuration hard-coded into app.

message CrewmobileConfig {
  optional string username = 1;
  optional string password = 2;
  optional string app_config_url = 3;
  optional string calendar_data_feed_url = 4;
  optional string oidc_client_class_name = 5;
}

// Session persistence.

message AccessToken {
  optional string access_token = 1;
  optional int32 expires_in = 2;
  optional string id_token = 3;
  optional string token_type = 4;
}

message RefreshToken {
  optional string refresh_token = 5;
  optional string refresh_token_valid_until = 6;
}

// API.

message ConfigurationSettings {
  optional int32 crew_check_in_hours_before = 1 [(json_name)="CrewCheckInHoursBefore"];
  optional string global_key_vault_url = 2 [(json_name)="Global.KeyVaultUrl"];
}

message Url {
  optional string base_url = 1;
}

message ServiceInfo {
  optional Url call_external_services_service = 1 [(json_name)="CallExternalServicesService"];
  optional Url check_in_service = 2 [(json_name)="CheckInService"];
  optional Url crewtrac_check_in_service = 3 [(json_name)="CrewTrac.CheckInService"];
  optional Url delay_notification_timer = 4 [(json_name)="DelayNotificationTimer"];
  optional Url device_registration_service = 5 [(json_name)="DeviceRegistrationService"];
  optional Url fire_base_msg_push = 6 [(json_name)="FireBaseMsgPush"];
  optional Url hotel_amenities_timed_update = 7 [(json_name)="HotelAmenitiesTimedUpdate"];
  optional Url hotel_info_update_service = 8 [(json_name)="HotelInfoUpdateService"];
  optional Url hotel_information_service = 9 [(json_name)="HotelInformationService"];
  optional Url mobile_app_task_log_service = 10 [(json_name)="MobileAppTaksLogService"]; // sic
  optional Url mobile_app_task_log = 11 [(json_name)="MobileAppTaskLog"];
  optional Url msg_converter_crew_notify_fire_base_service = 12 [(json_name)="MsgConverterCrewNotifyFireBaseService"];
  optional Url news_feed_service = 13 [(json_name)="NewsFeedService"];
  optional Url notification_response_service = 14 [(json_name)="NotificationResponseService"];
  optional Url pairing_service = 15 [(json_name)="PairingsService"];
  optional Url rtc_lookup_service = 16 [(json_name)="RTCLookUpService"];
  optional Url trip_match_notification_queue_timer = 17 [(json_name)="TripMatchNotificationQueueTimer"];
  optional Url help_data_service = 18 [(json_name)="HelpDataService"];
  optional Url preferences_service = 19 [(json_name)="PreferencesService"];
  optional Url test_notification_service = 20 [(json_name)="TestNotificationService"];
  optional Url crew_cover_history_service = 21 [(json_name)="CrewCoverHistoryService"];
}

message Claim {
  optional string type = 1;
  optional string value = 2;
}

message AppConfig {
  optional ConfigurationSettings configuration_settings = 1;
  optional ServiceInfo service_info = 2;
  optional string token = 3;
  optional string token_valid_until = 4;
  repeated Claim user_claim = 5 [(json_name)="userClaims"];
}


// -- CalendarDataFeed

message CalendarDataFeed {
  repeated Month month = 1;
}

message Month {
  repeated Day day = 1 [(json_name)="days"];
  optional string first_of_month = 2;
  optional int32 month = 3;
}

message Day {
  repeated CalendarEntry calendar_entry = 1 [(json_name)="calendarEntries"];
  optional DailySummary daily_summary = 2;
  optional PairingSummary pairing_summary = 3;
  optional string date = 4;
  optional string day = 5;
  optional bool reserve_bool = 6;
}

message DailySummary {
  optional string block = 1;
  optional string credit = 2;
  optional string duty = 3;
  optional string eod = 4;
  optional string eod_string = 5;
  optional string fdp = 6;
  optional Hotel hotel = 7;
}

message Hotel {
  optional string hotel_name = 1;
  optional string hotel_phone = 2;
}

message PairingSummary {
  optional string block = 1;
  optional string credit = 2;
  optional string pairing_number = 3;
  optional string tafb = 4;
}

message CalendarEntry {
  optional string body = 1;
  optional Flight flight = 2;
  optional string pairing_no = 3;
  optional string report_date_time_string = 4;
  optional string reporting_date_time = 5;
  optional string title = 6;
}

message Flight {
  optional string act_arr_display = 1;
  optional string act_arr_time = 2;
  optional string act_arr_time_utc = 3;
  optional int32 act_block_minutes = 4 [(json_name)="actBlock"];
  optional string act_block_time = 5;
  optional int32 act_credit_minutes = 6 [(json_name)="actCredit"];
  optional string act_credit_time = 7;
  optional string act_dep_display = 8;
  optional string act_dep_time = 9;
  optional string act_dep_time_utc = 10;
  optional string arr = 11;
  optional bool arr_display_is_actual = 12;
  optional bool arr_time_is_actual = 13;
  optional bool d_h = 14;
  optional string dead_head = 15;
  optional bool delay_bool = 16;
  optional bool delayed = 17;
  optional string dep = 18;
  optional string dep_display_is_actual = 19;
  optional string dep_time_is_actual = 20;
  optional string dhd = 21;
  optional string equipment_type = 22;
  optional int32 fdp_hours = 23 [(json_name)="fDPHours"];
  optional bool firstflight = 24;
  optional bool flight_active = 25;
  repeated string flight_codes = 26;
  optional int32 flight_date_id = 27;
  optional string flight_key = 28;
  optional string flight_number = 29;
  repeated FlightTeam flight_team = 30;
  optional string flight_type = 31;
  optional string gate = 32;
  repeated MinimumEquipmentList mel = 33 [(json_name)="mEL"];
  optional bool minimum_objective_ground_time = 34 [(json_name)="mOGT"];
  optional bool mel_bool = 35;
  optional bool new_crew = 36;
  optional bool new_tail = 37;
  optional int32 pairing_leg_number = 38;
  optional bool reserve_bool = 39;
  optional string sched_arr_display = 40;
  optional string sched_arr_time = 41;
  optional string sched_arr_time_string = 42;
  optional string sched_arr_time_utc = 43;
  optional int32 sched_block = 44;
  optional int32 sched_credit = 45;
  optional string sched_dep_display = 46;
  optional string sched_dep_time = 47;
  optional string sched_dep_time_string = 48;
  optional string sched_dep_time_utc = 49;
  optional string tail_number = 50;
  optional string time_between_flights = 51;
  optional string full_tail_number = 52;
}

message MinimumEquipmentList {
  optional string aircraft_type = 1;
  optional string category = 2;
  optional string description = 3;
  optional string item_number = 4;
  optional string last_updated = 5;
  optional string load_date = 6;
  optional string tail_number = 7;
}

message FlightTeam {
  optional string bid_base = 1;
  optional bool checked_in = 2;
  optional int32 crew_id = 3 [(json_name)="crewID"];
  optional string dead_header = 4;
  optional string flight_date_id = 5 [(json_name)="fLFlightDateID"];
  optional string first_name = 6;
  optional string last_name = 7;
  optional bool new_to_crew = 8;
  optional string pay_code = 9;
  optional string position = 10;
  optional bool self = 11;
  optional int32 sort_order = 12;
  optional CrewLocation crew_location = 13;
  optional string flight_number = 14;
  optional string departure_station = 15;
  optional string departure_time = 16;
}

message CrewLocation {
  optional int32 crew_id = 1 [(json_name)="crewID"];
  optional int32 flight_number = 2;
  optional string dep_station = 3;
  optional string sched_dep_dt = 4;
  optional int32 flight_date_id = 5 [(json_name)="flightDateID"];
  optional string prev_flight_arrival_time = 6;
  optional string prev_flight_dhd = 7;
  optional string arrival_date_type = 8;
  optional string coming_from = 9;
  optional int32 prev_flight_number = 10;
  optional string prev_flight_dep_station = 11;
  optional string prev_flight_arr_station = 12;
}

// -- CalendarDataFeed
